tests/run-make/crate-loading/multiple-dep-versions.stderr
warning: unused imports: `OtherType`, `Trait2`, and `Type`
  --> replaced
   |
LL | use dep_2_reexport::{OtherType, Trait2, Type, into_type2};
   |                      ^^^^^^^^^  ^^^^^^  ^^^^
   |
   = note: `#[warn(unused_imports)]` (part of `#[warn(unused)]`) on by default

warning: unused imports: `Trait`, `do_something_trait`, `do_something_type`, and `do_something`
  --> replaced
   |
LL | use dependency::{Trait, do_something, do_something_trait, do_something_type};
   |                  ^^^^^  ^^^^^^^^^^^^  ^^^^^^^^^^^^^^^^^^  ^^^^^^^^^^^^^^^^^

error[E0277]: the trait bound `dep_2_reexport::dependency::Type2: From<MainType>` is not satisfied
  --> replaced
   |
LL |     into_type2(MainType);
   |     ---------- ^^^^^^^^ the trait `From<MainType>` is not implemented for `dep_2_reexport::dependency::Type2`
   |     |
   |     required by a bound introduced by this call
   |
help: item with same name found
  --> replaced
   |
LL | pub struct Type2; // Only re-exported indirectly, never directly
   | ^^^^^^^^^^^^^^^^
   = note: perhaps two different versions of crate `dependency` are being used?
   = note: required for `MainType` to implement `Into<dep_2_reexport::dependency::Type2>`
note: required by a bound in `into_type2`
  --> replaced
   |
LL | pub fn into_type2(_: impl Into<dependency::Type2>) {}
   |                           ^^^^^^^^^^^^^^^^^^^^^^^ required by this bound in `into_type2`

error: aborting due to 1 previous error; 2 warnings emitted

For more information about this error, try `rustc --explain E0277`.